src/style.css
/* ... */
.page__header {
  position: sticky;
  top: 0;
  background-color: #fff;
  z-index: 100;
  height: 136px;
  display: flex;
  align-items: center;
  justify-content: stretch;
  padding-right: 20px;
}

.navigation {
  justify-content: flex-end;
}

.navigation.container {
  width: 100%;
}

.nav-menu {
  margin: 0;
  height: 100%;
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  align-items: center;
  gap: 56px;
}

.nav-menu__link {
  font-size: 24px;
  font-weight: 400;
  color: #000;
  text-decoration: none;
  position: relative;
}

.nav-menu__link::after {
  pointer-events: none;
  display: block;
  position: absolute;
  content: '';
  height: 100%;
  width: 100%;
  transform: translateY(-30%);
}

@media (hover: hover) and (pointer: fine) {
  .nav-menu__link:hover::after,
  .nav-menu__link.clicked::after {
    border-bottom: 4px solid black;
    transition: all 0.3s;
    transition-delay: 0.1s;
    transform: translateY(-70%);
  }
}

@media (hover: none) {
  .nav-menu__link.clicked::after {
    border-bottom: 4px solid black;
    transition: all 0.3s;
    transition-delay: 0.1s;
    transform: translateY(-70%);
  }
}

/* .nav-menu__link:active:after, */
.nav-menu__link.active {
  text-shadow: 1px 0 1px black;
}

/* .navigation-link:active:after, */
.navigation-link.active::after {
  border-bottom: 4px solid black;

  /* transition: all 0.3s; */
  transform: translateY(-70%);
}

section.hero {
  height: 630px;
  background: url('./img/hero-background.jpg?as=webp') no-repeat center/cover;
}

section.hero .container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero__wrapper {
  width: 690px;
  height: 360px;
  padding: 110px 1%;
  background-color: #fff;
  text-align: center;
}

.hero__title {
  margin: 0;
  font-family: 'Playfair Display', serif;
  font-weight: 500;
  font-size: 86px;
  line-height: 1.2;
  text-align: center;
}

.hero__description {
  margin-top: 14px;
  font-size: 20px;
}

.section-title {
  font-weight: 700;
  font-size: 24px;
  color: #000;
}

.section-title_vertical {
  writing-mode: vertical-lr;
  transform-origin: center center;
  transform: rotate(-180deg);
  margin: 0;
}

.biography {
  margin-top: 150px;
  height: 840px;
  display: flex;
  padding: 0 min(10%, 137px);
  position: relative;
}

.biography__header {
  width: 9.5%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: flex-start;
  margin-left: clamp(10px, 4%, 29px);
}

.biography__title {
  align-self: flex-start;
}

.biography__image {
  order: -1;
  max-width: 50%;
  min-width: 250px;
  flex-grow: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  overflow: hidden;
}

.biography__photo {
  display: block;
  object-fit: cover;
}

.person {
  max-width: 40%;
  justify-content: center;
  display: flex;
  flex-direction: column;

  /* padding-top: 175px; */
}

.person__name {
  font-family: 'Playfair Display', serif;
  font-size: 86px;
  font-weight: 500;
  line-height: 1.337;
}

.person__role {
  margin-top: 36px;
}

.person__role,
.person__skill-list {
  font-size: 18px;
  font-weight: 500;
  line-height: 1.1;
}

.person__skill-list {
  padding: 0;
  margin-top: 0;
  list-style-type: none;
}

.person__skill-item {
  display: inline-block;
}

.person__skill-item:not(:last-of-type)::after {
  margin: 2px;
  display: inline-block;
  content: '/';
}

.rectangle-divider {
  margin-top: 33px;
  width: 20px;
  height: 6px;
  background-color: #0d0d0d;
}

.person__quote {
  margin-left: 0;
  margin-top: 18px;
  font-family: Bitter-Regular, serif;
  font-size: 26px;
  font-weight: 400;
  line-height: 1.19;
}

.designers-section .section-title {
  margin: 151px 0 0 140px;
}

/* 
Элемент галерея
Свойство overflow: scroll hidden добавляет скролл и скрывает содержимое,
которое выпадает за пределы области элемента.
*/
.gallery {
  margin-top: 0;
  overflow-x: scroll;
  padding: 0 20px 10px;
}

/* 
Обёртка для карточек галереи - unordered list
Использую фактически для смещения горизонтального скролла,
для исключения наложения скроллбара на содержимое нижней
строки футера карточки

*/
.gallery__wrapper {
  margin: 30px 0 0;
  display: flex;
  gap: 20px;
  flex-wrap: nowrap;

  /* 
  Выравниваем все элементы по вертикали в конец контейнера - вниз,
  чтобы при изменении размеров изображение росло вверх и не смещало
  подписи
  */
  align-items: flex-end;
  list-style-type: none;
  padding: 0;
}

.gallery__card {
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
}

.gallery .designer {
  font-size: 16px;
}

.gallery .designer__footer {
  margin-top: 24px;
  width: 335px;
  align-self: flex-end;
}

.gallery .designer__footer p {
  margin: 0;
}

.gallery__image-wrapper {
  height: 440px;
  width: 335px;
  overflow: hidden;
  transition: all 0.5s;
}

.strong-point__card-image,
.designer__image {
  width: 100%;
}

.gallery__card_active {
  width: 572px;
}

.gallery_animated .gallery__card_active .gallery__image-wrapper {
  height: 538px;
  width: 572px;
}

.gallery_animated
  .gallery__card:not(.gallery__card_active):hover
  .gallery__image-wrapper {
  transform: scale(1.07);
  transform-origin: bottom;
}

.gallery_animated .gallery__card_active .strong-point__card-image,
.gallery_animated .gallery__card:hover .strong-point__card-image {
  position: relative;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.designer__name {
  text-transform: uppercase;
  font-weight: 900;
}

.designer__from {
  font-weight: 400;
}

.designer__from strong {
  font-weight: bold;
}

.testimonials {
  margin-top: 150px;
  height: 760px;
  padding-left: 139px;
  display: grid;
  grid-template-columns: 118px minmax(50px, 32%) 10% auto;
}

.testimonials-header {
  width: 28px;
  margin-left: 24px;
}

.testimonials-header > h2 {
  max-width: none;
  width: 28px;
}
/* ... */

